--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -10,5 +10,5 @@
       ]
     }
   },
-  "postCreateCommand": "pip install --upgrade pip && pip install -e ."
+  "postCreateCommand": "pip install --upgrade pip && pip install -e . && pip install black mypy pre-commit pytest"
 }
