ci: configure devcontainer to install make and use makefile

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,6 +1,15 @@
 {
   "name": "SmartFileOrganizer Dev",
   "image": "mcr.microsoft.com/devcontainers/python:3.11",
+  
+  "features": {
+    "ghcr.io/devcontainers/features/common-utils:2": {
+      "installMake": true,
+      "installZsh": true,
+      "upgradePackages": false
+    }
+  },
+
   "customizations": {
     "vscode": {
       "extensions": [
@@ -10,5 +19,5 @@
       ]
     }
   },
-  "postCreateCommand": "pip install --upgrade pip && pip install -e . && pip install black mypy pre-commit pytest"
+  "postCreateCommand": "make install" 
 }
