--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,3 +31,15 @@ ignore_missing_imports = true
 addopts = "--cov=src --cov-report=term-missing"
 testpaths = ["tests"]
 pythonpath = ["src"]
+
+[tool.coverage.report]
+exclude_lines = [
+    "pragma: no cover",
+    "def __repr__",
+    "if __name__ == .__main__.:",
+    "raise NotImplementedError",
+    "pass",
+    "\\.\\.\\.",
+    "@abstractmethod",
+    "@(abc\\.)?abstractmethod",
+]
